--- a/src/lib/core/core.gni
+++ b/src/lib/core/core.gni
@@ -35,7 +35,8 @@ declare_args() {
 
   # Configure the maximum size for logged messages
   if (current_os == "linux" || current_os == "mac") {
-    chip_log_message_max_size = 1708 # Allow base64 encoding of 1 MTU (4 * (1280 / 3) + padding
+    chip_log_message_max_size =
+        1708  # Allow base64 encoding of 1 MTU (4 * (1280 / 3) + padding
   } else {
     chip_log_message_max_size = 256
   }
