--- a/examples/common/tracing/BUILD.gn
+++ b/examples/common/tracing/BUILD.gn
@@ -33,12 +33,12 @@ source_set("trace_handlers_decoder") {
     "TraceDecoder.cpp",
     "TraceDecoderLog.cpp",
     "TraceHandlers.cpp",
-    "decoder/TraceDecoderProtocolBDX.cpp",
-    "decoder/TraceDecoderProtocolEcho.cpp",
-    "decoder/TraceDecoderProtocolInteractionModel.cpp",
-    "decoder/TraceDecoderProtocolInteractionModelCustomLog.cpp",
-    "decoder/TraceDecoderProtocolSecureChannel.cpp",
-    "decoder/TraceDecoderProtocolUserDirectedCommissioning.cpp",
+    "decoder/bdx/Decoder.cpp",
+    "decoder/echo/Decoder.cpp",
+    "decoder/interaction_model/Decoder.cpp",
+    "decoder/interaction_model/DecoderCustomLog.cpp",
+    "decoder/secure_channel/Decoder.cpp",
+    "decoder/udc/Decoder.cpp",
     "decoder/TraceDecoderProtocols.cpp",
     "decoder/TraceDecoderToCertificateString.cpp",
     "decoder/TraceDecoderToHexString.cpp",
@@ -55,12 +55,12 @@ executable("chip-trace-decoder") {
     "TraceDecoder.cpp",
     "TraceDecoderArgumentParser.cpp",
     "TraceDecoderLog.cpp",
-    "decoder/TraceDecoderProtocolBDX.cpp",
-    "decoder/TraceDecoderProtocolEcho.cpp",
-    "decoder/TraceDecoderProtocolInteractionModel.cpp",
-    "decoder/TraceDecoderProtocolInteractionModelCustomLog.cpp",
-    "decoder/TraceDecoderProtocolSecureChannel.cpp",
-    "decoder/TraceDecoderProtocolUserDirectedCommissioning.cpp",
+    "decoder/bdx/Decoder.cpp",
+    "decoder/echo/Decoder.cpp",
+    "decoder/interaction_model/Decoder.cpp",
+    "decoder/interaction_model/DecoderCustomLog.cpp",
+    "decoder/secure_channel/Decoder.cpp",
+    "decoder/udc/Decoder.cpp",
     "decoder/TraceDecoderProtocols.cpp",
     "decoder/TraceDecoderToCertificateString.cpp",
     "decoder/TraceDecoderToHexString.cpp",
