--- a/src/credentials/BUILD.gn
+++ b/src/credentials/BUILD.gn
@@ -62,6 +62,7 @@ static_library("credentials") {
   # For mbed and nrfconnect test builds, which are bilding monolithic test library these files are not needed.
   import("${chip_root}/build/chip/tests.gni")
   if (!(chip_build_tests && (chip_device_platform == "mbed" ||
+                             chip_device_platform == "openiotsdk" ||
                              chip_device_platform == "nrfconnect"))) {
     sources += [
       "tests/CHIPAttCert_test_vectors.cpp",
