Scripts added TC-ULABEL-2.3 TC-ULABEL-2.4 TC-ULABEL-2.5 Modified scripts TC-CC-9.1 TC-CC-9.2 TC-CC-9.3 TC-FLW-2.1 TC-GC-1.1 TC-GC-2.1 TC-ILL-2.1 TC-LVL-2.2 TC-MC-1.5 TC-MC-1.7 TC-MC-1.10 TC-PSCFG-1.1 TC-RH-1.1 TC-TM-11 TC-TSTAT-1.1 TC-TSUIC-1.1 TC-TSUIC-2.1

--- a/src/app/tests/suites/certification/Test_TC_ULABEL_2_5.yaml
+++ b/src/app/tests/suites/certification/Test_TC_ULABEL_2_5.yaml
@@ -13,23 +13,25 @@
 # limitations under the License.
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
-name:
-    92.4. [TC-LC-2.3] User Label cluster write verification [DUT - Commissionee]
+name: 92.6. [TC-ULABEL-2.5] User label cluster [DUT-client]
 
 config:
     nodeId: 0x12344321
-    cluster: "Basic"
-    endpoint: 0
+    cluster: "User Label"
+    endpoint: 1
 
 tests:
-    - label:
-          "TH1 writes LabelList attribute of the DUT by setting 'room:bedroom
-          1','Orientation:east', 'floor:3', 'direction:down'"
-      verification: |
-          sudo ./chip-tool userlabel write label-list '[{"label":"bedroom", "value":"bedroom1"}, {"label":"orientation", "value":"east"}, {"label":"floor", "value":"3"}, {"label":"direction", "value":"down"}]' 1 0
-      disabled: true
+    - label: "Wait for the commissioned device to be retrieved"
+      cluster: "DelayCommands"
+      command: "WaitForCommissionee"
+      arguments:
+          values:
+              - name: "nodeId"
+                value: nodeId
 
-    - label: "TH1 reads LabelList attribute of the DUT"
-      verification: |
-          sudo ./chip-tool userlabel read label-list 1 0
-      disabled: true
+    - label: "TH reads LabelList attribute of the DUT"
+      command: "readAttribute"
+      attribute: "label list"
+      response:
+          constraints:
+              type: list
