Add a BitMask class that adds more functionality beyond bit flags

--- a/src/lib/support/BUILD.gn
+++ b/src/lib/support/BUILD.gn
@@ -61,6 +61,7 @@ static_library("support") {
     "Base64.cpp",
     "Base64.h",
     "BitFlags.h",
+    "BitMask.h",
     "BufferReader.cpp",
     "BufferReader.h",
     "BufferWriter.cpp",
