--- a/examples/lighting-app/efr32/BUILD.gn
+++ b/examples/lighting-app/efr32/BUILD.gn
@@ -60,6 +60,9 @@ declare_args() {
 
   # Disable LCD on supported devices
   disable_lcd = false
+
+  # Disable IPv4 for rs911
+  chip_disable_wifi_ipv4 = false
 }
 
 declare_args() {
@@ -212,6 +215,10 @@ efr32_executable("lighting_app") {
   if (chip_enable_ota_requestor) {
     defines += [ "EFR32_OTA_ENABLED" ]
     sources += [ "${examples_plat_dir}/OTAConfig.cpp" ]
+  }
+
+if (chip_disable_wifi_ipv4) {
+    defines += [ "WIFI_IPV4_DISABLED" ]
   }
 
   # WiFi Settings
