Squashed commit of the following:
commit c1f494830792eeeff91e305833a0a2df5b7e2d67
Author: Austin Bozowski <bozowski@google.com>
Date:   Wed Jun 1 19:46:50 2022 +0000

    Restore workflows

commit 239b61cc08e887d7ac7fc7fdf34838bede987a9a
Author: Austin Bozowski <bozowski@google.com>
Date:   Wed Jun 1 19:42:00 2022 +0000

    Output

commit 0602dc1ecc2ba4e4f8eae6163ab0fa8912f4f5dc
Author: Austin Bozowski <bozowski@google.com>
Date:   Wed Jun 1 19:34:09 2022 +0000

    Test

commit f92534c276b1e708c767f2dd0694d85dac90bad9
Author: Austin Bozowski <bozowski@google.com>
Date:   Wed Jun 1 19:31:52 2022 +0000

    Refs`

commit ccc65644a4fe840e4569664039e8bb5f051a1fd3
Author: Austin Bozowski <bozowski@google.com>
Date:   Wed Jun 1 19:25:25 2022 +0000

    Helpful output

commit 0a1de0a68e76d9b7e3989410a4904df4331c59f4
Author: Austin Bozowski <bozowski@google.com>
Date:   Wed Jun 1 18:41:07 2022 +0000

    Fix git

commit cac8616059cd57d636dd48912ada3a0a238b6f29
Author: Austin Bozowski <bozowski@google.com>
Date:   Wed Jun 1 18:38:57 2022 +0000

    Finish git

commit 23ca7847b23d435441a9bff245c28fc75a3628fd
Author: Austin Bozowski <bozowski@google.com>
Date:   Wed Jun 1 18:21:11 2022 +0000

    Untested git

commit d8bb5b34e851fac5cb45f6eff023df6cf456e08b
Author: Austin Bozowski <bozowski@google.com>
Date:   Wed Jun 1 08:31:24 2022 +0000

    Save command

commit beb3b7759416a1b1cdf45196711400fead4dc737
Author: Austin Bozowski <bozowski@google.com>
Date:   Wed Jun 1 08:17:48 2022 +0000

    Repair

commit 5aadacfb883859c94d962d931a6ee1e70f1a3480
Author: Austin Bozowski <bozowski@google.com>
Date:   Wed Jun 1 08:15:50 2022 +0000

    test

commit 7bb9a173af85ef19f28ceed2942aa38163d3ce5a
Author: Austin Bozowski <bozowski@google.com>
Date:   Wed Jun 1 08:08:53 2022 +0000

    Format

commit 04a966e1d57c76711fb1a1417aa3871b1fcf1689
Author: Austin Bozowski <bozowski@google.com>
Date:   Wed Jun 1 07:56:02 2022 +0000

    RM workflows

commit 5474f72c98a1cc701b220ff594c2bc22f419f

--- a/examples/chef/ci_manifest.json
+++ b/examples/chef/ci_manifest.json
@@ -2,5 +2,5 @@
     "devices": {
         "lighting-app": "81a1262e611fab1a71ac4129b91cec0f"
     },
-    "zap_commit": "TEMP DISABLED"
+    "zap_commit": "6594a9257ce96ee6d852eed052939849b31259fc"
 }
