Enable IPv6 for WiFi (rs911x) Added build flag for Enabling and disabling IPv4/IPv6
Signed-off-by: Sharad Patil <sharad.patil@silabs.com>

--- a/examples/light-switch-app/efr32/BUILD.gn
+++ b/examples/light-switch-app/efr32/BUILD.gn
@@ -60,6 +60,9 @@ declare_args() {
 
   # Disable LCD on supported devices
   disable_lcd = false
+
+  # Argument to Disable IPv4 for wifi(rs911)
+  chip_disable_wifi_ipv4 = false
 }
 
 declare_args() {
@@ -213,6 +216,10 @@ efr32_executable("light_switch_app") {
   if (chip_enable_ota_requestor) {
     defines += [ "EFR32_OTA_ENABLED" ]
     sources += [ "${examples_plat_dir}/OTAConfig.cpp" ]
+  }
+
+  if (chip_disable_wifi_ipv4) {
+    defines += [ "WIFI_IPV4_DISABLED" ]
   }
 
   # WiFi Settings
