--- a/src/lib/support/tests/BUILD.gn
+++ b/src/lib/support/tests/BUILD.gn
@@ -22,6 +22,7 @@ chip_test_suite("tests") {
   output_name = "libSupportTests"
 
   test_sources = [
+    "TestBitMask.cpp",
     "TestBufferReader.cpp",
     "TestBufferWriter.cpp",
     "TestBytesCircularBuffer.cpp",
