--- a/src/platform/device.gni
+++ b/src/platform/device.gni
@@ -16,7 +16,7 @@ import("//build_overrides/chip.gni")
 import("${chip_root}/src/ble/ble.gni")
 
 declare_args() {
-  # Device platform layer: cc13x2_26x2, darwin, efr32, esp32, external, freertos, linux, nrfconnect, k32w0, qpg, tizen, cyw30739, bl602, none.
+  # Device platform layer: cc13x2_26x2, darwin, efr32, esp32, external, freertos, linux, nrfconnect, k32w0, qpg, tizen, cyw30739, bl602, openiotsdk, none.
 
   chip_device_platform = "auto"
   chip_platform_target = ""
@@ -77,7 +77,8 @@ declare_args() {
   # Select DNS-SD implementation
   if (chip_device_platform == "linux" || chip_device_platform == "esp32" ||
       chip_device_platform == "mbed" || chip_device_platform == "p6" ||
-      chip_device_platform == "ameba" || chip_device_platform == "webos") {
+      chip_device_platform == "ameba" || chip_device_platform == "webos" ||
+      chip_device_platform == "openiotsdk") {
     chip_mdns = "minimal"
   } else if (chip_device_platform == "darwin" ||
              chip_device_platform == "cc13x2_26x2" || current_os == "android" ||
@@ -124,6 +125,8 @@ if (chip_device_platform == "cc13x2_26x2") {
   _chip_device_layer = "CYW30739"
 } else if (chip_device_platform == "webos") {
   _chip_device_layer = "webos"
+} else if (chip_device_platform == "openiotsdk") {
+  _chip_device_layer = "openiotsdk"
 }
 
 if (chip_device_platform != "external") {
@@ -178,5 +181,6 @@ assert(
         chip_device_platform == "telink" || chip_device_platform == "mbed" ||
         chip_device_platform == "p6" || chip_device_platform == "android" ||
         chip_device_platform == "ameba" || chip_device_platform == "cyw30739" ||
-        chip_device_platform == "webos" || chip_device_platform == "bl602",
+        chip_device_platform == "webos" || chip_device_platform == "bl602" ||
+        chip_device_platform == "openiotsdk",
     "Please select a valid value for chip_device_platform")
