--- a/src/crypto/crypto.gni
+++ b/src/crypto/crypto.gni
@@ -12,6 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+import("//build_overrides/chip.gni")
+import("${chip_root}/src/platform/device.gni")
+
 declare_args() {
   # Crypto implementation: mbedtls, openssl.
   chip_crypto = ""
@@ -21,7 +24,8 @@ declare_args() {
 
 if (chip_crypto == "") {
   if (current_os == "android" || current_os == "freertos" ||
-      current_os == "zephyr" || current_os == "mbed" || current_os == "webos") {
+      current_os == "zephyr" || current_os == "mbed" || 
+      current_os == "webos" || chip_device_platform == "openiotsdk") {
     chip_crypto = "mbedtls"
   } else {
     chip_crypto = "openssl"
