per tcarmelveilleux, move LastKnownGoodTime into separate class

--- a/src/credentials/BUILD.gn
+++ b/src/credentials/BUILD.gn
@@ -38,6 +38,8 @@ static_library("credentials") {
     "GenerateChipX509Cert.cpp",
     "GroupDataProvider.h",
     "GroupDataProviderImpl.cpp",
+    "LastKnownGoodTime.cpp",
+    "LastKnownGoodTime.h",
     "attestation_verifier/DeviceAttestationDelegate.h",
     "attestation_verifier/DeviceAttestationVerifier.cpp",
     "attestation_verifier/DeviceAttestationVerifier.h",
