Squashed commit of the following:
commit 436ce0b33adec9cae50e3bcddbba52fc388d0ded
Author: Austin Bozowski <bozowski@google.com>
Date:   Thu Jun 2 21:36:07 2022 +0000

    [no ci] caps

commit 126ff6a4c9ad7fb4e66651e81c9fec2e9b6923d6
Author: Austin Bozowski <bozowski@google.com>
Date:   Thu Jun 2 21:28:34 2022 +0000

    Restyle

commit f7b72225724ced2803f7ec53d1434ea59810274d
Author: Austin Bozowski <bozowski@google.com>
Date:   Thu Jun 2 21:23:37 2022 +0000

    [no ci] restore workflows

commit d44b0146ba395e05d4d74e94db3e910d6e0381a6
Author: Austin Bozowski <bozowski@google.com>
Date:   Thu Jun 2 21:21:27 2022 +0000

    README

commit be2dc9ccca28d66ae6d0385593da480463e5e7ea
Author: Austin Bozowski <bozowski@google.com>
Date:   Thu Jun 2 21:19:04 2022 +0000

    README

commit 01deda9783fbd916eaf46d99757b9506465590b3
Author: Austin Bozowski <bozowski@google.com>
Date:   Thu Jun 2 21:15:31 2022 +0000

    README

commit abba2241ab1198fdfc63782c40bda5aa53b6e18b
Author: Austin Bozowski <bozowski@google.com>
Date:   Thu Jun 2 20:37:28 2022 +0000

    Make GCB workable

commit 1623e4bc7ef5e7412277ca4429f2c2aa350de650
Author: Austin Bozowski <bozowski@google.com>
Date:   Thu Jun 2 20:31:36 2022 +0000

    Flatten with block

commit 02f3e78a450010fbcfa5f87b4fa176678dc8fb30
Author: Austin Bozowski <bozowski@google.com>
Date:   Thu Jun 2 20:29:42 2022 +0000

    Remove functionality to check master branch for zap

commit 2a79c1c9d63226174ed00208c17086c61cb22c48
Author: Austin Bozowski <bozowski@google.com>
Date:   Thu Jun 2 20:24:07 2022 +0000

    Remove explicit encoding

commit 2dfcb00e3142f9d16c440b755b2c893d19e1855d
Author: Austin Bozowski <bozowski@google.com>
Date:   Thu Jun 2 20:20:43 2022 +0000

    Temp delete workflows

--- a/integrations/cloudbuild/chef.yaml
+++ b/integrations/cloudbuild/chef.yaml
@@ -37,6 +37,6 @@ artifacts:
         paths: ["/workspace/artifacts/*.tar.gz"]
 # Using higher CPU machines generally speeds up builds, except bootstrap is always
 # slow.
-# options:
-#    machineType: "E2_HIGHCPU_32"
-#    diskSizeGb: 200
+options:
+    machineType: "E2_HIGHCPU_32"
+    diskSizeGb: 200
