--- a/src/app/tests/suites/certification/Test_TC_WNCV_2_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_WNCV_2_1.yaml
@@ -31,10 +31,12 @@ tests:
                 value: nodeId
 
     ### MANDATORY Attributes
+    ### 1 MANDATORY Attributes
     ### Attribute[  0]: Type  =======================================
-    - label: "2: read the RO mandatory attribute default: Type"
+    - label: "1a: read the RO mandatory attribute default: Type"
       command: "readAttribute"
       attribute: "Type"
+      PICS: A_TYPE
       response:
           constraints:
               type: enum8
@@ -42,9 +44,10 @@ tests:
               maxValue: 9
 
     ### Attribute[  7]: ConfigStatus  ===============================
-    - label: "2: read the RO mandatory attribute default: ConfigStatus"
+    - label: "1b: read the RO mandatory attribute default: ConfigStatus"
       command: "readAttribute"
       attribute: "ConfigStatus"
+      PICS: A_CONFIGSTATUS
       response:
           constraints:
               type: map8
@@ -52,9 +55,10 @@ tests:
               maxValue: 63
 
     ### Attribute[ 10]: OperationalStatus  ==========================
-    - label: "2: read the RO mandatory attribute default: OperationalStatus"
+    - label: "1c: read the RO mandatory attribute default: OperationalStatus"
       command: "readAttribute"
       attribute: "OperationalStatus"
+      PICS: A_OPERATIONALSTATUS
       response:
           constraints:
               type: map8
@@ -62,9 +66,10 @@ tests:
               maxValue: 63
 
     ### Attribute[ 13]: EndProductType ==============================
-    - label: "2: read the RO mandatory attribute default: EndProductType"
+    - label: "1d: read the RO mandatory attribute default: EndProductType"
       command: "readAttribute"
       attribute: "EndProductType"
+      PICS: A_ENDPRODUCTTYPE
       response:
           constraints:
               type: enum8
@@ -72,22 +77,31 @@ tests:
               maxValue: 23
 
     ### Attribute[ 23]: Mode ========================================
-    - label: "2: read the RW mandatory attribute default: Mode"
+    - label: "1e: read the RW mandatory attribute default: Mode"
       command: "readAttribute"
       attribute: "Mode"
+      PICS: A_MODE
       response:
           constraints:
               type: map8
               minValue: 0
               maxValue: 15
 
-    ### CONDITIONALLY MANDATORY Attributes
+    - label: "1f: write a value into the RW mandatory attribute:: Mode"
+      command: "writeAttribute"
+      attribute: "Mode"
+      PICS: A_MODE
+      arguments:
+          value: 0
+
+    ### 2 CONDITIONALLY MANDATORY Attributes
     ### Attribute[ 11]: TargetPositionLiftPercent100ths  ====================
     - label:
-          "2: read the RO optional attribute default:
+          "2a: read the RO optional attribute default:
           TargetPositionLiftPercent100ths"
       command: "readAttribute"
       attribute: "TargetPositionLiftPercent100ths"
+      PICS: A_TARGETPOSITIONLIFTPERCENT100THS
       response:
           constraints:
               type: Percent100ths
@@ -96,10 +110,11 @@ tests:
 
     ### Attribute[ 12]: TargetPositionTiltPercent100ths  ====================
     - label:
-          "2: read the RO optional attribute default:
+          "2b: read the RO optional attribute default:
           TargetPositionTiltPercent100ths"
       command: "readAttribute"
       attribute: "TargetPositionTiltPercent100ths"
+      PICS: A_TARGETPOSITIONTILTPERCENT100THS
       response:
           constraints:
               type: Percent100ths
@@ -108,10 +123,11 @@ tests:
 
     ### Attribute[ 14]: CurrentPositionLiftPercent100ths  ====================
     - label:
-          "2: read the RO optional attribute default:
+          "2c: read the RO optional attribute default:
           CurrentPositionLiftPercent100ths"
       command: "readAttribute"
       attribute: "CurrentPositionLiftPercent100ths"
+      PICS: A_CURRENTPOSITIONLIFTPERCENT100THS
       response:
           constraints:
               type: Percent100ths
@@ -120,10 +136,11 @@ tests:
 
     ### Attribute[ 15]: CurrentPositionTiltPercent100ths  ====================
     - label:
-          "2: read the RO optional attribute default:
+          "2d: read the RO optional attribute default:
           CurrentPositionTiltPercent100ths"
       command: "readAttribute"
       attribute: "CurrentPositionTiltPercent100ths"
+      PICS: A_CURRENTPOSITIONTILTPERCENT100THS
       response:
           constraints:
               type: Percent100ths
@@ -131,9 +148,11 @@ tests:
               maxValue: 10000
 
     ### Attribute[ 16]: InstalledOpenLimitLift  ====================
-    - label: "2: read the RO optional attribute default: InstalledOpenLimitLift"
+    - label:
+          "2e: read the RO optional attribute default: InstalledOpenLimitLift"
       command: "readAttribute"
       attribute: "InstalledOpenLimitLift"
+      PICS: A_INSTALLEDOPENLIMITLIFT
       response:
           constraints:
               type: uint16
@@ -142,9 +161,10 @@ tests:
 
     ### Attribute[ 17]: InstalledClosedLimitLift  ====================
     - label:
-          "2: read the RO optional attribute default: InstalledClosedLimitLift"
+          "2f: read the RO optional attribute default: InstalledClosedLimitLift"
       command: "readAttribute"
       attribute: "InstalledClosedLimitLift"
+      PICS: A_INSTALLEDCLOSEDLIMITLIFT
       response:
           constraints:
               type: uint16
@@ -152,9 +172,11 @@ tests:
               maxValue: 65535
 
     ### Attribute[ 18]: InstalledOpenLimitTilt  ====================
-    - label: "2: read the RO optional attribute default: InstalledOpenLimitTilt"
+    - label:
+          "2g: read the RO optional attribute default: InstalledOpenLimitTilt"
       command: "readAttribute"
       attribute: "InstalledOpenLimitTilt"
+      PICS: A_INSTALLEDOPENLIMITTILT
       response:
           constraints:
               type: uint16
@@ -163,32 +185,52 @@ tests:
 
     ### Attribute[ 19]: InstalledClosedLimitTilt  ====================
     - label:
-          "2: read the RO optional attribute default: InstalledClosedLimitTilt"
+          "2h: read the RO optional attribute default: InstalledClosedLimitTilt"
       command: "readAttribute"
       attribute: "InstalledClosedLimitTilt"
+      PICS: A_INSTALLEDCLOSEDLIMITTILT
       response:
           constraints:
               type: uint16
               minValue: 0
               maxValue: 65535
 
-    ### CONDITIONALLY and PURELY OPTIONAL Attributes
+    ### 3 CONDITIONALLY and PURELY OPTIONAL Attributes
     ### Attribute[ 26]: SafetyStatus  ==========================
-    - label: "4: read the RO mandatory attribute default: SafetyStatus"
+    - label: "3a: read the RO mandatory attribute default: SafetyStatus"
       command: "readAttribute"
       attribute: "SafetyStatus"
+      PICS: A_SAFETYSTATUS
       response:
           constraints:
               type: map16
               minValue: 0
               maxValue: 2047
 
+    - label: "3a.2: write a value into the RO mandatory attribute: SafetyStatus"
+      command: "writeAttribute"
+      attribute: "SafetyStatus"
+      PICS: A_SAFETYSTATUS
+      arguments:
+          value: 4096
+      response:
+          error: UNSUPPORTED_WRITE
+
+    - label: "3a.3: reads back the RO mandatory attribute: SafetyStatus"
+      command: "readAttribute"
+      attribute: "SafetyStatus"
+      PICS: A_SAFETYSTATUS
+      response:
+          constraints:
+              type: map16
+              notValue: 4096
+
     ### Attribute[  1]: PhysicalClosedLimitLift  ====================
     - label:
-          "4: read the RO optional attribute default: PhysicalClosedLimitLift"
-      disabled: true
+          "3b: read the RO optional attribute default: PhysicalClosedLimitLift"
       command: "readAttribute"
       attribute: "PhysicalClosedLimitLift"
+      PICS: A_PHYSICALCLOSEDLIMITLIFT
       response:
           constraints:
               type: uint16
@@ -197,10 +239,10 @@ tests:
 
     ### Attribute[  2]: PhysicalClosedLimitTilt  ====================
     - label:
-          "4: read the RO optional attribute default: PhysicalClosedLimitTilt"
-      disabled: true
+          "3c: read the RO optional attribute default: PhysicalClosedLimitTilt"
       command: "readAttribute"
       attribute: "PhysicalClosedLimitTilt"
+      PICS: A_PHYSICALCLOSEDLIMITTILT
       response:
           constraints:
               type: uint16
@@ -208,9 +250,10 @@ tests:
               maxValue: 65535
 
     ### Attribute[  3]: CurrentPositionLift  ====================
-    - label: "4: read the RO optional attribute default: CurrentPositionLift"
+    - label: "3d: read the RO optional attribute default: CurrentPositionLift"
       command: "readAttribute"
       attribute: "CurrentPositionLift"
+      PICS: A_CURRENTPOSITIONLIFT
       response:
           constraints:
               type: uint16
@@ -218,9 +261,10 @@ tests:
               maxValue: 65535
 
     ### Attribute[  4]: CurrentPositionTilt  ====================
-    - label: "4: read the RO optional attribute default: CurrentPositionTilt"
+    - label: "3e: read the RO optional attribute default: CurrentPositionTilt"
       command: "readAttribute"
       attribute: "CurrentPositionTilt"
+      PICS: A_CURRENTPOSITIONTILT
       response:
           constraints:
               type: uint16
@@ -228,10 +272,11 @@ tests:
               maxValue: 65535
 
     ### Attribute[  5]: NumberOfActuationsLift  ====================
-    - label: "4: read the RO optional attribute default: NumberOfActuationsLift"
-      disabled: true
+    - label:
+          "3f: read the RO optional attribute default: NumberOfActuationsLift"
       command: "readAttribute"
       attribute: "NumberOfActuationsLift"
+      PICS: A_NUMBEROFACTUATIONSLIFT
       response:
           constraints:
               type: uint16
@@ -239,10 +284,11 @@ tests:
               maxValue: 65535
 
     ### Attribute[  6]: NumberOfActuationsTilt  ====================
-    - label: "4: read the RO optional attribute default: NumberOfActuationsTilt"
-      disabled: true
+    - label:
+          "3g: read the RO optional attribute default: NumberOfActuationsTilt"
       command: "readAttribute"
       attribute: "NumberOfActuationsTilt"
+      PICS: A_NUMBEROFACTUATIONSTILT
       response:
           constraints:
               type: uint16
@@ -251,10 +297,11 @@ tests:
 
     ### Attribute[  8]: CurrentPositionLiftPercentage  ====================
     - label:
-          "4: read the RO optional attribute default:
+          "3h: read the RO optional attribute default:
           CurrentPositionLiftPercentage"
       command: "readAttribute"
       attribute: "CurrentPositionLiftPercentage"
+      PICS: A_CURRENTPOSITIONLIFTPERCENTAGE
       response:
           constraints:
               type: Percent
@@ -263,10 +310,11 @@ tests:
 
     ### Attribute[  9]: CurrentPositionTiltPercentage  ====================
     - label:
-          "4: read the RO optional attribute default:
+          "3i:read the RO optional attribute default:
           CurrentPositionTiltPercentage"
       command: "readAttribute"
       attribute: "CurrentPositionTiltPercentage"
+      PICS: A_CURRENTPOSITIONTILTPERCENTAGE
       response:
           constraints:
               type: Percent
