Manual scripts-May30 (#18936)
* Added Manual Scripts

* Added Auto generated scripts

* Restyled by whitespace

* updated tDM script

* Added Auto generate file

* Restyled by whitespace

* Restyled by clang-format

Co-authored-by: Restyled.io <commits@restyled.io>

--- a/src/app/tests/suites/certification/Test_TC_DM_4_18.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DM_4_18.yaml
@@ -14,7 +14,7 @@
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
 name:
-    10.4.18. [TC-DM-4.18][Thread] Verification for attributes check
+    10.4.18. [TC-DM-4.18] [Thread] Verification for attributes check
     [DUT-Commissioner]
 
 config:
@@ -88,7 +88,7 @@ tests:
           [1645772984.654530][3895:3900] CHIP:EM: Sending Standalone Ack for MessageCounter:14026610 on exchange 33717i
       disabled: true
 
-    - label: "DUT reads LastNetowrkingStatus attribute from the TH"
+    - label: "DUT reads LastNetworkingStatus attribute from the TH"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read last-networking-status 162 0
 
