--- a/src/app/tests/suites/certification/Test_TC_DM_4_2.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DM_4_2.yaml
@@ -14,7 +14,7 @@
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
 name:
-    10.4.2. [TC-DM-4.2][Thread] Verification for attributes check [DUT -
+    10.4.2. [TC-DM-4.2] [Thread] Verification for attributes check [DUT -
     Commissionee]
 
 config:
@@ -28,14 +28,14 @@ tests:
 
       disabled: true
 
-    - label: "TH1 is commissioned with DUT"
+    - label: "Commmission TH and DUT on Thread setup"
       verification: |
 
       disabled: true
 
     - label:
-          "TH1 reads Descriptor Cluster from the DUT with EP0 TH1 reads
-          ServerList from the DUT"
+          "TH reads Descriptor Cluster from the DUT with EP0 TH reads ServerList
+          from the DUT"
       verification: |
           buntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool descriptor read server-list 162 0
 
@@ -68,7 +68,7 @@ tests:
           [1645772414.102925][3827:3832] CHIP:EM: Sending Standalone Ack for MessageCounter:15329672 on exchange 6140i
       disabled: true
 
-    - label: "TH1 reads FeatureMap attribute from the DUT"
+    - label: "TH reads FeatureMap attribute from the DUT"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read feature-map 162 0
 
@@ -81,7 +81,7 @@ tests:
           [1645772204.503556][3809:3814] CHIP:EM: Sending Standalone Ack for MessageCounter:5988746 on exchange 46140i
       disabled: true
 
-    - label: "TH1 reads the MaxNetworks attribute from the DUT"
+    - label: "TH reads the MaxNetworks attribute from the DUT"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read max-networks 162 0
 
@@ -95,13 +95,13 @@ tests:
       disabled: true
 
     - label:
-          "TH1 saves the MaxNetworks attribute value as 'maxvalue' for furture
-          use"
+          "TH saves the MaxNetworks attribute value as 'MaxNetworksValue' for
+          future use"
       verification: |
-
+          TH1 saves the MaxNetworks attribute value
       disabled: true
 
-    - label: "TH1 reads the Networks attribute list from the DUT"
+    - label: "TH reads the Networks attribute list from the DUT"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read networks 162 0
 
@@ -117,7 +117,7 @@ tests:
           [1645772651.446431][3856:3861] CHIP:EM: Sending Standalone Ack for MessageCounter:12695576 on exchange 11133i
       disabled: true
 
-    - label: "TH1 reads ScanMaxTimeSeconds attribute from the DUT"
+    - label: "TH reads ScanMaxTimeSeconds attribute from the DUT"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read scan-max-time-seconds 162 0
 
@@ -129,7 +129,7 @@ tests:
           [1645772820.741512][3867:3872] CHIP:EM: Sending Standalone Ack for MessageCounter:10309775 on exchange 55305i
       disabled: true
 
-    - label: "TH1 reads ConnectMaxTimeSeconds Attribute from the DUT"
+    - label: "TH reads ConnectMaxTimeSeconds Attribute from the DUT"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read connect-max-time-seconds 162 0
 
@@ -141,7 +141,7 @@ tests:
           [1645772901.120100][3879:3884] CHIP:EM: Sending Standalone Ack for MessageCounter:11917538 on exchange 4188
       disabled: true
 
-    - label: "TH1 reads InterfaceEnabled attribute from the DUT"
+    - label: "TH reads InterfaceEnabled attribute from the DUT"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read interface-enabled 162 0
 
@@ -153,7 +153,7 @@ tests:
           [1645772984.654530][3895:3900] CHIP:EM: Sending Standalone Ack for MessageCounter:14026610 on exchange 33717i
       disabled: true
 
-    - label: "TH1 reads LastNetworkingStatus attribute from the DUT"
+    - label: "TH reads LastNetworkingStatus attribute from the DUT"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read last-networking-status 162 0
 
@@ -166,7 +166,7 @@ tests:
       disabled: true
 
     - label:
-          "TH1 reads the LastNetworkID attribute from the DUT TH1 reads the
+          "TH reads the LastNetworkID attribute from the DUT TH reads the
           Networks attribute from the DUT"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read last-network-id 162 0
@@ -179,7 +179,7 @@ tests:
           [1645773167.182422][3913:3918] CHIP:EM: Sending Standalone Ack for MessageCounter:2029571 on exchange 18566i
       disabled: true
 
-    - label: "TH1 reads the LastConnectErrorValue attribute from the DUT"
+    - label: "TH reads the LastConnectErrorValue attribute from the DUT"
       verification: |
           ubuntu@ubuntu:~/connectedhomeip/examples/chip-tool/out/debug$ ./chip-tool networkcommissioning read last-connect-error-value 162 0
 
