--- a/src/transport/tests/BUILD.gn
+++ b/src/transport/tests/BUILD.gn
@@ -37,6 +37,7 @@ chip_test_suite("tests") {
     "TestPeerConnections.cpp",
     "TestPeerMessageCounter.cpp",
     "TestSecureSession.cpp",
+    "TestSecureSessionTable.cpp",
     "TestSessionManager.cpp",
   ]
 
