--- a/examples/tv-app/android/BUILD.gn
+++ b/examples/tv-app/android/BUILD.gn
@@ -78,6 +78,7 @@ shared_library("jni") {
     "${chip_root}/examples/tv-app/tv-common",
     "${chip_root}/src/app/server/java:jni",
     "${chip_root}/src/lib",
+    "${chip_root}/src/lib/support/jsontlv",
     "${chip_root}/third_party/inipp",
   ]
 
