--- a/src/app/tests/suites/certification/Test_TC_CGEN_2_2.yaml
+++ b/src/app/tests/suites/certification/Test_TC_CGEN_2_2.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
-name: 88.4. [TC-GC-2.3] BUSY Status code verification [DUT - Commissionee]
+name: 90.3. [TC-CGEN-2.2] ArmFailSafe command verification [DUT - Server]
 
 config:
     nodeId: 0x12344321
@@ -27,8 +27,8 @@ tests:
       disabled: true
 
     - label:
-          "TH1 sends ArmFailSafe command to the DUT with ExpiryLengthSeconds as
-          900 seconds and Breadcrumb value as 0"
+          "TH1 sends ArmFailSafe command to the DUT with ExpiryLengthSeconds
+          value as ''commission_timeout'' and the Breadcrumb value as 0"
       verification: |
           ubuntu@ubuntu:~/apps$ sudo ./chip-tool generalcommissioning arm-fail-safe 60 0 60 1 0
 
@@ -45,8 +45,13 @@ tests:
           [1646202957.619712][2956:2961] CHIP:EM: Sending Standalone Ack for MessageCounter:5531048 on exchange 43022i
       disabled: true
 
+    - label: "TH saves the current timestamp as TS1"
+      verification: |
+
+      disabled: true
+
     - label:
-          "TH1 Sends SetRegulatoryConfig command to the DUT with Location
+          "TH1 sends SetRegulatoryConfig command to the DUT with Location
           attribute"
       verification: |
           ubuntu@ubuntu:~/apps$ sudo ./chip-tool generalcommissioning set-regulatory-config 0 0 0 60 1 0
@@ -66,23 +71,6 @@ tests:
           For the 5.5 commissioning flow the steps are added. Not required to verify on GC test plan verification, because it's verified in another test plan.
       disabled: true
 
-    - label:
-          "When TH1s commissioning process with DUT is in progress, TH2 sends
-          ArmFailSafe command to the same DUT with ExpiryLengthSeconds value as
-          950 seconds and Breadcrumb value as 1"
-      verification: |
-          ./chip-tool generalcommissioning arm-fail-safe 950 1 100 1 0
-
-
-          [1646317402.469879][13150:13155] CHIP:DMG: Received Command Response Data, Endpoint=0 Cluster=0x0000_0030 Command=0x0000_0001
-          [1646317402.469969][13150:13155] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0030 Command 0x0000_0001
-          [1646317402.470096][13150:13155] CHIP:TOO:   ArmFailSafeResponse: {
-          [1646317402.470169][13150:13155] CHIP:TOO:     errorCode: 4
-          [1646317402.470218][13150:13155] CHIP:TOO:     debugText:
-          [1646317402.470266][13150:13155] CHIP:TOO:    }
-          [1646317402.470338][13150:13155] CHIP:DMG: ICR moving to [AwaitingDe]
-      disabled: true
-
     - label: "TH1 sends CSRRequest command to the DUT"
       verification: |
           For the 5.5 commissioning flow the steps are added. Not required to verify on GC test plan verification, because it's verified in another test plan.
@@ -91,4 +79,20 @@ tests:
     - label: "TH1 sends AddNOC command to the DUT"
       verification: |
           For the 5.5 commissioning flow the steps are added. Not required to verify on GC test plan verification, because it's verified in another test plan.
+      disabled: true
+
+    - label: "TH1 Sends CommissionComplete command to the DUT"
+      verification: |
+          ubuntu@ubuntu:~/apps$ sudo ./chip-tool generalcommissioning commissioning-complete 1 0
+
+          [1646203451.094771][3006:3011] CHIP:DMG:        InteractionModelRevision = 1
+          [1646203451.094813][3006:3011] CHIP:DMG: },
+          [1646203451.094921][3006:3011] CHIP:DMG: Received Command Response Data, Endpoint=0 Cluster=0x0000_0030 Command=0x0000_0005
+          [1646203451.094997][3006:3011] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0030 Command 0x0000_0005
+          [1646203451.095097][3006:3011] CHIP:TOO:   CommissioningCompleteResponse: {
+          [1646203451.095157][3006:3011] CHIP:TOO:     errorCode: 0
+          [1646203451.095200][3006:3011] CHIP:TOO:     debugText:
+          [1646203451.095242][3006:3011] CHIP:TOO:    }
+          [1646203451.095293][3006:3011] CHIP:DMG: ICR moving to [AwaitingDe]
+          [1646203451.095375][3006:3011] CHIP:EM: Sending Standalone Ack for MessageCounter:14415629 on exchange 59296i
       disabled: true
