--- a/src/app/tests/suites/certification/Test_TC_CGEN_2_4.yaml
+++ b/src/app/tests/suites/certification/Test_TC_CGEN_2_4.yaml
@@ -13,7 +13,9 @@
 # limitations under the License.
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
-name: 88.3. [TC-GC-2.2] ArmFailSafe command verification [DUT - Commissionee]
+name:
+    90.5. [TC-CGEN-2.4] Verification For CommissioningError on response message
+    [DUT - Server]
 
 config:
     nodeId: 0x12344321
@@ -27,8 +29,14 @@ tests:
       disabled: true
 
     - label:
+          "During PASE Session TH1 sends CommissionComplete command to the DUT"
+      verification: |
+
+      disabled: true
+
+    - label:
           "TH1 sends ArmFailSafe command to the DUT with ExpiryLengthSeconds
-          value as ''commission_timeout'' and the Breadcrumb value as 0"
+          value as 'commission_timeout' and the Breadcrumb value as 0"
       verification: |
           ubuntu@ubuntu:~/apps$ sudo ./chip-tool generalcommissioning arm-fail-safe 60 0 60 1 0
 
@@ -45,9 +53,22 @@ tests:
           [1646202957.619712][2956:2961] CHIP:EM: Sending Standalone Ack for MessageCounter:5531048 on exchange 43022i
       disabled: true
 
-    - label: "TH saves the current timestamp as TS1"
+    - label:
+          "TH1 sends SetRegulatoryConfig command to the DUT with Location
+          attribute value as '3'"
       verification: |
+          ubuntu@ubuntu:~/apps$ sudo ./chip-tool generalcommissioning set-regulatory-config 3 0 0 60 1 0
 
+          [1646204704.308373][6252:6257] CHIP:DMG:        InteractionModelRevision = 1
+          [1646204704.308415][6252:6257] CHIP:DMG: },
+          [1646204704.308526][6252:6257] CHIP:DMG: Received Command Response Data, Endpoint=0 Cluster=0x0000_0030 Command=0x0000_0003
+          [1646204704.308602][6252:6257] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0030 Command 0x0000_0003
+          [1646204704.308703][6252:6257] CHIP:TOO:   SetRegulatoryConfigResponse: {
+          [1646204704.308763][6252:6257] CHIP:TOO:     errorCode: 0
+          [1646204704.308806][6252:6257] CHIP:TOO:     debugText:
+          [1646204704.308847][6252:6257] CHIP:TOO:    }
+          [1646204704.308899][6252:6257] CHIP:DMG: ICR moving to [AwaitingDe]
+          [1646204704.308974][6252:6257] CHIP:EM: Sending Standalone Ack for MessageCounter:2793138 on exchange 35617i
       disabled: true
 
     - label:
@@ -95,4 +116,32 @@ tests:
           [1646203451.095242][3006:3011] CHIP:TOO:    }
           [1646203451.095293][3006:3011] CHIP:DMG: ICR moving to [AwaitingDe]
           [1646203451.095375][3006:3011] CHIP:EM: Sending Standalone Ack for MessageCounter:14415629 on exchange 59296i
+      disabled: true
+
+    - label:
+          "TH1 reads Breadcrumb value from the DUT NOTE: Reading an attribute is
+          to confirm that commissioning successfully completed"
+      verification: |
+          ubuntu@ubuntu:~/apps$ sudo ./chip-tool generalcommissioning read breadcrumb 1 0
+
+          [1646205172.305272][6395:6400] CHIP:DMG:        SuppressResponse = true,
+          [1646205172.305305][6395:6400] CHIP:DMG:        InteractionModelRevision = 1
+          [1646205172.305336][6395:6400] CHIP:DMG: }
+          [1646205172.305511][6395:6400] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0030 Attribute 0x0000_0000DataVersion: 1894223167
+          [1646205172.305586][6395:6400] CHIP:TOO:   Breadcrumb: 0
+          [1646205172.305747][6395:6400] CHIP:EM: Sending Standalone Ack for MessageCounter:10552439 on exchange 39551i
+      disabled: true
+
+    - label: "TH1 Sends CommissionComplete command to the DUT"
+      verification: |
+          ubuntu@ubuntu:~/apps$ sudo ./chip-tool generalcommissioning commissioning-complete 1 0
+
+          [1646205216.257281][6409:6414] CHIP:DMG: Received Command Response Data, Endpoint=0 Cluster=0x0000_0030 Command=0x0000_0005
+          [1646205216.257341][6409:6414] CHIP:TOO: Endpoint: 0 Cluster: 0x0000_0030 Command 0x0000_0005
+          [1646205216.257418][6409:6414] CHIP:TOO:   CommissioningCompleteResponse: {
+          [1646205216.257463][6409:6414] CHIP:TOO:     errorCode: 0
+          [1646205216.257495][6409:6414] CHIP:TOO:     debugText:
+          [1646205216.257531][6409:6414] CHIP:TOO:    }
+          [1646205216.257578][6409:6414] CHIP:DMG: ICR moving to [AwaitingDe]
+          [1646205216.257725][6409:6414] CHIP:EM: Sending Standalone Ack for MessageCounter:13393976 on exchange 5554i
       disabled: true
