--- a/src/app/tests/suites/certification/Test_TC_DLOG_2_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DLOG_2_1.yaml
@@ -14,8 +14,8 @@
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
 name:
-    54.2.1. [TC-DIAGLOG-2.1] Diagnostic Logs Cluster Commands Checks with BDX
-    [DUT Server]
+    55.2.1. [TC-DLOG-2.1] Diagnostic Logs Cluster Commands Checks with BDX
+    [DUT-Server]
 
 config:
     nodeId: 0x12344321
