--- a/src/app/tests/suites/certification/Test_TC_DLOG_2_2.yaml
+++ b/src/app/tests/suites/certification/Test_TC_DLOG_2_2.yaml
@@ -14,8 +14,8 @@
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
 name:
-    54.2.2. [TC-DIAGLOG-2.2] Diagnostic Logs Cluster Commands Checks without BDX
-    [DUT Server]
+    55.2.2. [TC-DLOG-2.2] Diagnostic Logs Cluster Commands Checks without BDX
+    [DUT-Server]
 
 config:
     nodeId: 0x12344321
