--- a/src/app/tests/suites/certification/Test_TC_LCFG_3_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_LCFG_3_1.yaml
@@ -14,7 +14,7 @@
 # Auto-generated scripts for harness use only, please review before automation. The endpoints and cluster names are currently set to default
 
 name:
-    100.3.1. [TC-LO-3.1] Localization Configuration Cluster
+    101.3.1. [TC-LCFG-3.1] Localization Configuration Cluster
     Attributes[DUT-Client]
 
 config:
