--- a/examples/build_overrides/mw320_sdk.gni
+++ b/examples/build_overrides/mw320_sdk.gni
@@ -14,5 +14,6 @@
 
 declare_args() {
   # Root directory for MW320 SDK.
-  mw320_sdk_build_root = "//third_party/connectedhomeip/third_party/nxp/mw320_sdk"
+  mw320_sdk_build_root =
+      "//third_party/connectedhomeip/third_party/nxp/mw320_sdk"
 }
