Added unit test and HasOpKeypairForFabric()

--- a/src/crypto/tests/BUILD.gn
+++ b/src/crypto/tests/BUILD.gn
@@ -44,6 +44,10 @@ chip_test_suite("tests") {
     "TestCryptoLayer.h",
   ]
 
+  test_sources = [
+    "TestPersistentStorageOpKeyStore.cpp",
+  ]
+
   if (chip_device_platform == "esp32" || chip_device_platform == "nrfconnect" ||
       chip_device_platform == "efr32") {
     defines = [ "CURRENT_TIME_NOT_IMPLEMENTED=1" ]
@@ -59,5 +63,6 @@ chip_test_suite("tests") {
     "${nlunit_test_root}:nlunit-test",
   ]
 
+  #tests = [ "CHIPCryptoPALTest", "TestPersistentStorageOpKeyStore" ]
   tests = [ "CHIPCryptoPALTest" ]
 }
