--- a/src/crypto/tests/BUILD.gn
+++ b/src/crypto/tests/BUILD.gn
@@ -44,9 +44,7 @@ chip_test_suite("tests") {
     "TestCryptoLayer.h",
   ]
 
-  test_sources = [
-    "TestPersistentStorageOpKeyStore.cpp",
-  ]
+  test_sources = [ "TestPersistentStorageOpKeyStore.cpp" ]
 
   if (chip_device_platform == "esp32" || chip_device_platform == "nrfconnect" ||
       chip_device_platform == "efr32") {
