Added platform "mw320" for MW320 SDK submodule.
Signed-off-by: David Lin <yu-hao.lin@nxp.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -249,3 +249,4 @@
 [submodule "third_party/nxp/mw320_sdk/repo"]
 	path = third_party/nxp/mw320_sdk/repo
 	url = https://github.com/nxptest/mw320_sdk
+	platforms = mw320
