--- a/config/openiotsdk/chip-gn/mbedtls/BUILD.gn
+++ b/config/openiotsdk/chip-gn/mbedtls/BUILD.gn
@@ -14,6 +14,14 @@
 
 import("//build_overrides/chip.gni")
 
-# Open IoT SDK has its own mbedtls, so nothing to do, just provide a target
+config("mbedtls_config") {
+  include_dirs = [ "${chip_root}/config/openiotsdk/mbedtls" ]
+  defines = [
+      "MBEDTLS_CONFIG_FILE=<mbedtls_config.h>"
+  ]
+}
+
+# Open IoT SDK has its own mbedtls library, just provide a target and configuraiton
 group("mbedtls") {
+    public_configs = [ ":mbedtls_config" ]
 }
